Fix broken CSS

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -13,8 +13,8 @@ blockquote[xml|lang]{
 
 [epub|type~="z3998:verse"] p > span{
 	display: block;
-	padding-left: -1em;
-	text-indent: 1em;
+	padding-left: 1em;
+	text-indent: -1em;
 }
 
 [epub|type~="z3998:verse"] p > span + br{
